@@ -1,44 +1,25 @@
 ---
-title: Actualizar a AEM 6.5 Forms en OSGi
-description: Puede realizar una actualización directa de AEM 6.1 Forms, AEM 6.2 Forms y LiveCycle ES4 SP1 a AEM 6.3 Forms.
+title: Actualizar a AEM 6.5 Forms LTS en OSGi
+description: Puede realizar una actualización directa de AEM 6.5.22.0 Forms a AEM 6.5 Forms LTS.
 content-type: reference
-products: SG_EXPERIENCEMANAGER/6.3/FORMS
-topic-tags: installing
-geptopics: SG_AEMFORMS/categories/jee
-role: Admin,User
+role: Admin, User
 solution: Experience Manager, Experience Manager Forms
-feature: Adaptive Forms,AEM Forms on OSGi, AEM Forms Upgrade
-source-git-commit: 168cb023768ff3139937ab7f437ab7d00185bca0
+feature: Adaptive Forms, AEM Forms on OSGi, AEM Forms Upgrade
+exl-id: 9233d4b7-441c-4cbd-86f8-2c52b99c3330
+source-git-commit: bc91f56d447d1f2c26c160f5c414fd0e6054f84c
 workflow-type: tm+mt
-source-wordcount: '938'
-ht-degree: 97%
+source-wordcount: '853'
+ht-degree: 78%
 
 ---
 
-# Actualizar a AEM 6.5 Forms en OSGi {#upgrade-to-aem-forms-osgi}
+# Actualizar a AEM 6.5 Forms LTS en OSGi {#upgrade-to-aem-forms-osgi}
 
-Puede realizar una actualización directa de AEM 6.3 Forms o AEM 6.4 Forms a AEM 6.5 Forms.
+Para [actualizar de AEM 6.5 a AEM 6.5 LTS](/help/sites-deploying/upgrade.md), actualice a AEM 6.5.22.0 Forms o posterior. Se admite una actualización directa de AEM 6.5.22.0 a AEM 6.5 Forms LTS.
 
-La ruta de actualización directa desde **AEM 6.0 Forms, AEM 6.1 Forms** y **AEM 6.2 Forms** a AEM 6.5 Forms no está disponible. Realizar una [actualización intermedia a AEM 6.2 Forms](https://helpx.adobe.com/es/experience-manager/6-2/forms/using/upgrade.html), [actualización a AEM 6.3 Forms](https://helpx.adobe.com/es/experience-manager/6-3/forms/using/upgrade.html) o [actualización a AEM 6.4 Forms](/help/forms/using/upgrade.md) y, a continuación, actualizar de AEM 6.3 Forms o AEM 6.4 Forms a AEM 6.5 Forms.
+Si utiliza AEM 6.0 Forms, AEM 6.1 Forms, AEM 6.2 Forms, AEM 6.3 Forms, AEM 6.4 Forms o AEM 6.5 Forms, no estará disponible la actualización directa a AEM 6.5 Forms LTS. Para obtener rutas de actualización detalladas, consulte la documentación de [Rutas de actualización](/help/forms/using/upgrade.md).
 
-Haga lo siguiente para actualizar de AEM 6.3 Forms o AEM 6.4 Forms a AEM 6.5 Forms:
-
-1. Actualice la instancia de AEM existente a AEM 6.5. Los pasos se enumeran a continuación:
-
-   1. Instale el Service Pack y los parches más recientes para AEM 6.3 Forms o AEM 6.4 Forms. Para obtener más información, consulte [Centro de soporte de AEM](https://helpx.adobe.com/es/experience-manager/aem-releases-updates.html).
-   1. Prepare la instancia de origen para la actualización. Para ver los pasos detallados, consulte [Actualizar a AEM 6.5](/help/sites-deploying/upgrade.md).
-   1. Descargue [AEM 6.5 QuickStart](/help/sites-deploying/deploy.md#getting%20the%20software).
-   1. **(Solo instalaciones basadas en Unix/Linux)** Si utiliza UNIX o Linux como sistema operativo subyacente, abra la ventana de terminal, vaya a la carpeta que contiene crx-quickstart y ejecute el siguiente comando:
-
-      `chmod -R 755 ../crx-quickstart`
-
-   1. Actualizar la instancia de AEM a AEM 6.3. Para obtener instrucciones paso a paso, consulte [Actualizar a AEM 6.5](/help/sites-deploying/upgrade.md).
-
-      Antes de continuar con los siguientes pasos, espere hasta que los mensajes ServiceEvent REGISTERED y ServiceEvent UNREGISTERED dejen de aparecer en el archivo &lt;crx-repository>/error.log.
-
-      >[!NOTE]
-      >
-      >Una vez que el servidor esté en funcionamiento, algunos paquetes de AEM Forms permanecen en estado de instalación. El número de paquetes puede variar para cada instalación. Puede ignorar de forma segura el estado de estos paquetes. Los paquetes se enumeran en https://&#39;[server]:[port]&#39;/system/console/.
+Después de actualizar al Service Pack AEM Forms 6.5.22.0, siga estos pasos para actualizar a AEM 6.5 LTS Forms:
 
 1. Instalar el paquete de complementos para AEM Forms. A continuación se detallan los pasos que debe seguir:
 
@@ -48,20 +29,25 @@ Haga lo siguiente para actualizar de AEM 6.3 Forms o AEM 6.4 Forms a AEM 6.5 For
       1. Seleccione **[!UICONTROL Forms]** en la lista desplegable **[!UICONTROL Solución]**.
       1. Seleccione la versión y el tipo del paquete. También puede usar la opción **[!UICONTROL Buscar descargas]** para filtrar los resultados.
    1. Seleccione el nombre del paquete aplicable a su sistema operativo, seleccione **[!UICONTROL Aceptar términos de EULA]** y seleccione **[!UICONTROL Descargar]**.
+   1. Abra el [Administrador de paquetes](/help/sites-administering/package-manager.md) y haga clic en **[!UICONTROL Cargar paquete]** para cargar el paquete.
    1. Abra el [Administrador de paquetes](https://experienceleague.adobe.com/docs/experience-manager-65-lts/administering/contentmanagement/package-manager.html) y haga clic en **[!UICONTROL Cargar paquete]** para cargar el paquete.
    1. Seleccione el paquete y haga clic en **[!UICONTROL Instalar]**.
 
-      También puede descargar el paquete utilizando el vínculo directo que aparece en el artículo [Versiones de AEM Forms](https://helpx.adobe.com/es/aem-forms/kb/aem-forms-releases.html).
+      También puede descargar el paquete utilizando el vínculo directo que aparece en el artículo [Versiones de AEM Forms](https://experienceleague.adobe.com/en/docs/experience-manager-release-information/aem-release-updates/forms-updates/aem-forms-releases).
 
-      >[!NOTE]
-      >
-      >Una vez instalado el paquete, se le pedirá que reinicie la instancia de AEM. **No detenga el servidor inmediatamente.** Antes de detener el servidor de AEM Forms, espere hasta que los mensajes ServiceEvent REGISTERED y ServiceEvent UNREGISTERED dejen de aparecer en el archivo &lt;crx-repository>/error.log y el registro esté estable. Tenga en cuenta también que algunos paquetes pueden permanecer en el estado instalado. Puede ignorar de forma segura el estado de estos paquetes.
+      Una vez instalado el paquete, se le pedirá que reinicie la instancia de AEM. **No detenga el servidor inmediatamente.** Antes de detener el servidor de AEM Forms, espere hasta que los mensajes ServiceEvent REGISTERED y ServiceEvent UNREGISTERED dejen de aparecer en el archivo &lt;crx-repository>/error.log y el registro esté estable. Tenga en cuenta también que algunos paquetes pueden permanecer en el estado instalado. Puede ignorar de forma segura el estado de estos paquetes.
+
+
+      **Reinicie la instancia de AEM con los siguientes parámetros adicionales de la línea de comandos de JVM**:
+      `--add-opens java.base/java.util=ALL-UNNAMED --add-exports=java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED`
+
+      Si el servidor se inicia mediante un script o servicio, actualícelo en consecuencia para incluir lo anterior, de modo que esto también sea efectivo después de los siguientes reinicios.
 
 1. Reinicie la instancia de AEM.
 
    >[!NOTE]
    >
-   Se recomienda utilizar el comando &quot;Ctrl + C&quot; para reiniciar el SDK. El reinicio del SDK de AEM mediante métodos alternativos, como detener los procesos de Java, puede generar incoherencias en el entorno de desarrollo de AEM.
+   > Se recomienda utilizar el comando &quot;Ctrl + C&quot; para reiniciar el SDK. El reinicio del SDK de AEM mediante métodos alternativos, como detener los procesos de Java, puede generar incoherencias en el entorno de desarrollo de AEM.
 
 1. Realice actividades posteriores a la instalación.
 
@@ -107,3 +93,7 @@ Haga lo siguiente para actualizar de AEM 6.3 Forms o AEM 6.4 Forms a AEM 6.5 For
       * `https://'[server]:[port]'/crx/packmgr`
       * `https://'[server]:[port]'/crx/de`
       * `https://'[server]:[port]'/aem/forms.html/content/dam/formsanddocuments`
+
+   >[!NOTE]
+   >
+   >En AEM 6.4 Forms, la estructura del repositorio crx ha cambiado. Si actualiza de Forms 6.3 a AEM 6.5 Forms, utilice las rutas modificadas para la personalización que cree de nuevo. Para obtener la lista completa de las rutas cambiadas, consulte [Reestructurar el repositorio de Forms en AEM](https://experienceleague.adobe.com/en/docs/experience-manager-65/content/implementing/deploying/restructuring/forms-repository-restructuring-in-aem-6-5).
